Minor polish and nice-to-haves