@@ -67,11 +67,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <configuration>
-          <systemPropertyVariables>
-            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-            <maven.home>${maven.home}</maven.home>
-          </systemPropertyVariables>
-        </configuration>
+		  <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+		</configuration>
       </plugin>
     </plugins>
   </build>
